--- a/modules/index.jade
+++ b/modules/index.jade
@@ -16,8 +16,10 @@ block body
       span(app-version)
 
   script(src='js/lib/angular/angular.js')
+  script(src='js/lib/angular-route/angular-route.js')
   script(src='js/app.js')
   script(src='js/services.js')
   script(src='js/controllers.js')
   script(src='js/filters.js')
   script(src='js/directives.js')
+  script(src='js/modules/beers/index.js')
