--- a/modules/beers/views/edit.jade
+++ b/modules/beers/views/edit.jade
@@ -27,7 +27,7 @@ form
     textarea.form-control(name='description',
       data-ng-model='beer.description')
   .form-group
-    button(data-ng-click='save(beer)') Salvar
+    button(data-ng-click='update(beer)') Salvar
 
 
 
