--- a/modules/index.jade
+++ b/modules/index.jade
@@ -2,12 +2,12 @@ extends layout
 
 block body
   div(ng-controller='AppCtrl')
-    h2 Hello {{name}}
+    h1 Adega Be MEAN
     ul.menu
       li
-        a(href='view1') view1
+        a(href='beers') Listagem
       li
-        a(href='view2') view2
+        a(href='beers/create') Cadastro
 
     div(ng-view)
 
